--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
-    <body>
-      <script>window.global = {}</script>
-      <script src="index.js"></script>
-    </body>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <script>window.global = {}</script>
+    <script src="index.js"></script>
+  </body>
 </html>
 
